# inflowave

./: .eslintrc.cjs  .gitignore  ANTD_REMOVAL_SUMMARY.md  ANTD_WARNINGS_FIXED.md  BROWSER_MODE_FIXES.md  CODE_USAGE_ANALYSIS_REPORT.md  COMPLETION_SUMMARY.md  CROSS_PLATFORM_SUMMARY.md  ESLINT_CONFIG.md  INVOKE_ERRORS_FIXED.md  LICENSE  MSIX-CONVERSION.md  PHASE3_ARCHITECTURE.md  PROGRESS.md  PROJECT-STRUCTURE.md  PROJECT_SUMMARY.md  README-en.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  TASK_COMPLETION_SUMMARY.md  TESTING_PLAN.md  WORKFLOWS_GUIDE.md  eslint.config.js  icon-preview.html  index.html  mac.icns  package-lock.json  package.json  playwright.config.ts  release-notes-output.md  rust-toolchain.toml  tailwind.config.js  test-connection.md  test-tauri.sh  test-ui-changes.html  tsconfig.json  tsconfig.node.json  vite.config.ts  数据源树优化说明.md
.augment/rules/: inflowave.md
.cargo/: config.toml
.gitee/workflows/: simple-release.yml  version-release.yml
dev-docs/: architecture.md  browser-compatibility-fixes.md  deployment.md  i18n-best-practices.md  index.md  linux-desktop-environments.md  multiarch-build.md  troubleshooting-build-timeout.md  ubuntu-appimage-fix.md  windows-crash-fixes.md  windows-packaging-final.md
docs/: API.md  AUTO_UPDATE.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  Divider-Component-Fix.md  Divider-Fix-Summary.md  HTML-to-ShadCN-Migration-Results.md  HTML-to-ShadCN-Migration-Strategy.md  INFLUXDB2_TEST_COMMANDS.md  INFLUXDB3_TEST_COMMANDS.md  IOTDB_TEST_COMMANDS.md  PORT_DISCOVERY_SYSTEM.md  PROJECT_CLASSES_DOCUMENTATION.md  SQL_TEST_QUERIES.md  UI-Component-Migration-Plan.md  UI-Design-Optimization.md  code-quality-optimization.md  database-icons-mapping.md  database-nodes-summary.md  database-version-auto-detection.md  database-version-detection-refactor.md  developer-experience-optimization.md  github-actions-build-modes.md  icon-requirements.md  multi-database-support-upgrade-plan.md  performance-optimization.md  port-conflict-resolution.md  production-port-handling.md  security-optimization.md  sql-code-generator.md  tab-drag-drop-feature.md  testing-guide.md  typescript-configuration-fix.md  v0.6.2-fixes-summary.md  硬编码数据与简略实现分析报告.md
examples/: influxdb_usage.rs
playwright-report/: index.html
public/: .gitkeep
scripts/: README.md  VERSION-MANAGEMENT.md  batch-fix-errors.js  build-msix.ps1  build-multiarch.ps1  build-windows-portable-zip.ps1  build-windows-portable.ps1  build-windows.ps1  build.ps1  build.sh  check-build-status.ps1  check-clipboard-usage.js  check-duplicate-i18n-keys.cjs  check-duplicate-implementations.js  check-i18n.cjs  check-linux-deps.ps1  check-unused-icons.cjs  clean-antd-css.js  clean-missing-i18n.cjs  clean-rebuild.bat  clean-rebuild.ps1  clean-unused-imports.ps1  compile_test.ps1  convert-icon-manual.ps1  convert-icon.js  copy-user-docs.js  create-sample-data.js  delete-unused-icons.cjs  detect-arch.ps1  diagnose-windows.ps1  download-fonts-ci.cjs  download-fonts-local.cjs  final-cleanup.js  fix-all-remaining-antd.js  fix-api-compatibility.js  fix-code-quality.js  fix-divider-imports.js  fix-link-components.js  fix-modal-imports.js  fix-network.ps1  (+47 more)
src/: App.tsx  main.tsx  test-fixes.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.arm64.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows-cargo-wix.conf.json  tauri.windows-debug.conf.json  tauri.windows-full.conf.json  tauri.windows-msi-only.conf.json  tauri.windows-msix.conf.json  tauri.windows-nsis-only.conf.json  tauri.windows-nsis.conf.json  tauri.windows-portable-x64.conf.json  tauri.windows-portable-x86.conf.json  tauri.windows-stable.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  linux.json
src-tauri/icons/: README.md  icon.icns
src-tauri/icons/mac/: 1024x1024.icns  256x256.icns  32x32.icns  512x512.icns  64x64.icns
src-tauri/src/: main.rs  updater.rs
src-tauri/src/commands/: connection.rs  context_menu.rs  custom_fonts.rs  dashboard.rs  data_export.rs  data_write.rs  database.rs  database_detection.rs  embedded_server.rs  extensions.rs  influxdb2.rs  iotdb.rs  logs.rs  mod.rs  multi_source_performance.rs  optimization_history.rs  performance.rs  port_manager.rs  query.rs  query_history.rs  s3.rs  settings.rs  system.rs  user_experience.rs  window.rs  window_theme.rs  workspace.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: client.rs  connection.rs  influxdb_client.rs  iotdb_client.rs  iotdb_multi_client.rs  iotdb_official_client.rs  mod.rs  pool.rs  s3_client.rs  s3_database_client.rs
src-tauri/src/database/influxdb/: benchmarks.rs  capability.rs  detector.rs  driver.rs  integration_tests.rs  metrics.rs  mod.rs  pool.rs  tests.rs  utils.rs  v1_driver.rs  v2_driver.rs  v3_driver.rs
src-tauri/src/database/iotdb/: README.md  capability.rs  dialect.rs  driver.rs  mod.rs  thrift_protocol.rs  types.rs
src-tauri/src/database/iotdb/drivers/: client.rs  common.rs  mod.rs  official_thrift.rs  rest_v2.rs  thrift.rs
src-tauri/src/database/iotdb/examples/: test_compatibility.rs
src-tauri/src/database/protocol/: http.rs  iotdb_official.rs  mod.rs  thrift.rs  websocket.rs
src-tauri/src/models/: connection.rs  database.rs  mod.rs  query.rs  tree_node.rs
src-tauri/src/services/: connection_service.rs  database_service.rs  database_version_detector.rs  embedded_server.rs  mod.rs  performance_collector.rs  performance_stats.rs  port_manager.rs  query_service.rs  video_server.rs
src-tauri/src/utils/: config.rs  encryption.rs  http_client.rs  logger.rs  mod.rs  persistence.rs  validation.rs
src-tauri/wix/: README.md  WixUI_zh-cn.wxl  license.rtf  main.wxs  zh-CN.wxl  zh-cn.wxl
test-results/: database-test-report.md  results.json  results.xml
tests/: global-setup.ts  global-teardown.ts
user-docs/: README.md  changelog.md  connection-management.md  data-import.md  data-visualization.md  database-operations.md  faq.md  installation.md  performance-tips.md  query-features.md  quick-start.md  shortcuts.md  troubleshooting.md
(+809 files in other folders)
