[package]
name = "InfloWave"
version = "0.4.0"
description = "A modern time-series database management tool"
authors = ["Kkape Team"]
license = "MIT"
repository = "https://github.com/kkape/inflowave"
edition = "2021"
default-run = "InfloWave"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls", "stream"], default-features = false }
futures-util = "0.3"
influxdb = { version = "0.7", features = ["derive"] }
influxdb2 = "0.5.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
base64 = "0.21"
aes-gcm = "0.10"
rand = "0.8"
sysinfo = "0.29"
lazy_static = "1.4"
rust_xlsxwriter = "0.64"
async-trait = "0.1"
# IoTDB 相关依赖
url = "2.4"
bytes = "1.5"
iotdb = "0.0.7"

# 多协议支持依赖
tokio-tungstenite = "0.20"

# Linux平台特定依赖 - 启用原生菜单支持
[target.'cfg(target_os = "linux")'.dependencies]
tauri = { version = "2.0", features = ["linux-libxdo"] }

[dev-dependencies]
tempfile = "3.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# TLS 后端选择
default-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.0"

# 构建配置优化
[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
# 减少编译时间
build-override = { opt-level = 0 }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Lint 配置 - 控制警告级别
[lints.rust]
# 将一些常见的警告降级为允许
dead_code = "allow"
unused_variables = "warn"
unused_imports = "warn"
non_snake_case = "warn"
