[package]
name = "InfloWave"
version = "0.4.6"
description = "A modern time-series database management tool"
authors = ["Kkape Team"]
license = "MIT"
repository = "https://github.com/kkape/inflowave"
edition = "2021"
default-run = "InfloWave"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls", "stream"], default-features = false }
futures-util = "0.3"
influxdb = { version = "0.7", features = ["derive"] }
influxdb2 = "0.5.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
base64 = "0.21"
aes-gcm = "0.10"
rand = "0.8"
sysinfo = "0.29"
lazy_static = "1.4"
rust_xlsxwriter = "0.64"
async-trait = "0.1"
# IoTDB 原生协议依赖
url = "2.4"
bytes = "1.5"
# 移除封装客户端，使用原生协议实现
# iotdb = "0.0.7"  # 已移除，改用原生协议

# Thrift 协议支持
thrift = "0.17"
# REST API 支持已通过 reqwest 提供
# WebSocket 支持（可选）
tokio-tungstenite = { version = "0.20", optional = true }

# 新增依赖
regex = "1.10"
hex = "0.4"
# 用于二进制数据处理
byteorder = "1.5"
# 用于网络连接
tokio-util = { version = "0.7", features = ["codec"] }
# 用于数据压缩（IoTDB 支持 SNAPPY 压缩）
snap = "1.1"
urlencoding = "2.1"

# InfluxDB 3.x FlightSQL 支持
arrow-flight = { version = "53.0", features = ["flight-sql-experimental"], optional = true }
arrow = { version = "53.0", optional = true }
arrow-schema = { version = "53.0", optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

# Linux平台特定依赖 - 启用原生菜单支持
[target.'cfg(target_os = "linux")'.dependencies]
tauri = { version = "2.0", features = ["linux-libxdo"] }

[dev-dependencies]
tempfile = "3.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# TLS 后端选择
default-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# IoTDB 版本兼容性特性
iotdb-v0_13 = []
iotdb-v1 = []
iotdb-v2 = []
iotdb-rest = []
iotdb-websocket = ["tokio-tungstenite"]

# InfluxDB 版本兼容性特性
influxdb-v1 = []
influxdb-v2 = []
influxdb-v3 = ["arrow-flight", "arrow", "arrow-schema", "tonic", "prost"]

# 默认启用 InfluxDB v2 和 IoTDB v1, v2, REST 支持 (v3 暂时禁用)
default = ["influxdb-v2", "iotdb-v1", "iotdb-v2", "iotdb-rest"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.0"

# 构建配置优化
[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
# 减少编译时间
build-override = { opt-level = 0 }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Lint 配置 - 控制警告级别
[lints.rust]
# 将一些常见的警告降级为允许
dead_code = "allow"
unused_variables = "warn"
unused_imports = "warn"
non_snake_case = "warn"
