[package]
name = "InfloWave"
version = "0.8.7"
description = "A modern time-series database management tool"
authors = ["Kkape Team"]
license = "MIT"
repository = "https://github.com/chenqi92/inflowave"
edition = "2021"
default-run = "InfloWave"

# WiX 配置已移至 tauri.conf.json
# Tauri 2.0 使用内置的 WiX 支持，不需要 cargo-wix
# 如果需要自定义 MSI，请在 tauri.conf.json 的 bundle.windows.wix 中配置

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = ["codegen"] }

[dependencies]
tauri = { version = "2.9.2", features = [
    "tray-icon"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "native-tls", "stream"], default-features = false }
futures-util = "0.3"
influxdb = { version = "0.7.2", features = ["derive"] }
influxdb2 = "0.5.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0.17"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] }
tracing-appender = "0.2"
dirs = "6.0.0"
base64 = "0.22.1"
aes-gcm = "0.10"
rand = "0.9.1"
sysinfo = "0.37.2"
lazy_static = "1.4"
rust_xlsxwriter = "0.91.0"
async-trait = "0.1.89"
# IoTDB 原生协议依赖
url = "2.5.7"
bytes = "1.10.1"
# 移除封装客户端，使用原生协议实现
# Thrift 协议支持
thrift = "0.17"
# REST API 支持已通过 reqwest 提供
# WebSocket 支持（可选）
tokio-tungstenite = { version = "0.28.0", optional = true }

# 新增依赖
regex = "1.10"
hex = "0.4"
# 用于二进制数据处理
byteorder = "1.5"
# 用于网络连接
tokio-util = { version = "0.7", features = ["codec"] }
# 用于数据压缩（IoTDB 支持 SNAPPY 压缩）
snap = "1.1"
urlencoding = "2.1"
# CSV 解析（用于 Flux 查询结果）
csv = "1.3"

# S3/MinIO 支持
aws-sdk-s3 = "1.112.0"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.9"
aws-smithy-types = "1.1"
aws-smithy-runtime-api = "1.1"
mime_guess = "2.0"

# Windows 特定依赖已移除，使用标准库替代

# InfluxDB 3.x FlightSQL 支持
arrow-flight = { version = "57.0.0", features = ["flight-sql-experimental"], optional = true }
arrow = { version = "57.0.0", optional = true }
arrow-schema = { version = "57.0.0", optional = true }
tonic = { version = "0.14.2", optional = true }
prost = { version = "0.14.1", optional = true }

# macOS平台特定依赖 - 用于窗口背景色设置
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSColor", "NSWindow"] }

# Linux平台特定依赖 - 启用原生菜单支持
[target.'cfg(target_os = "linux")'.dependencies]
tauri = { version = "2.9", features = ["linux-libxdo"] }

[dev-dependencies]
tempfile = "3.23.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# TLS 后端选择
default-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# IoTDB 版本兼容性特性
iotdb-v0_13 = []
iotdb-v1 = []
iotdb-v2 = []
iotdb-rest = []
iotdb-websocket = ["tokio-tungstenite"]

# InfluxDB 版本兼容性特性
influxdb-v1 = []
influxdb-v2 = []
influxdb-v3 = ["arrow-flight", "arrow", "arrow-schema", "tonic", "prost"]

# 默认启用 InfluxDB v1, v2 和 IoTDB v1, v2, REST 支持 (v3 需要修复API兼容性问题)
default = ["influxdb-v1", "influxdb-v2", "iotdb-v1", "iotdb-v2", "iotdb-rest"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-os = "2.3"
tauri-plugin-notification = "2.3"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-clipboard-manager = "2.3"

# 构建配置优化
[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
# 减少编译时间
build-override = { opt-level = 0 }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Lint 配置 - 控制警告级别
[lints.rust]
# 将一些常见的警告降级为允许
dead_code = "allow"
unused_variables = "warn"
unused_imports = "warn"
non_snake_case = "warn"
